fix: overflow sulla lista dx

--- a/milestone1/css/style.css
+++ b/milestone1/css/style.css
@@ -124,6 +124,7 @@
 .list {
     width: 100%;
     height: calc(100% - 185px);
+    overflow-y: auto;
 }
 
 li {
